core/authelia/deployment.yaml
# authelia/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: authelia
  namespace: core
  labels:
    app: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia/authelia:latest
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: authelia-keys
              mountPath: /config/secrets
      
      volumes:
        - name: authelia-keys
          secret:
            secretName: authelia-secrets-files
            items:
              - key: oidc_private.pem
                path: oidc/jwks/oidc_private.pem
        - name: config-template-volume
          configMap:
            name: authelia-config
        - name: config-volume
          emptyDir: {}
