core/authelia/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: core
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
  - "auth.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authelia
      port: 9091
